<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/F93_TBL_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="80dp"
        android:text="@string/L_Description"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/F93_L_CruCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/L_CruCat"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/F93_TBL_Title"
        app:layout_constraintTop_toBottomOf="@+id/F93_TBL_Title" />

    <TextView
        android:id="@+id/F93_L_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/L_DishName"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/F93_In_CruCat"
        app:layout_constraintTop_toBottomOf="@+id/F93_In_CruCat" />

    <Spinner
        android:id="@+id/F93_In_CruCat"
        android:layout_width="281dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/F93_L_CruCat"
        app:layout_constraintTop_toBottomOf="@+id/F93_L_CruCat" />


    <EditText
        android:id="@+id/F93_In_DishName"
        android:layout_width="282dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/L_Name"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/F93_L_Name"
        app:layout_constraintTop_toBottomOf="@+id/F93_L_Name" />

    <TextView
        android:id="@+id/F93_L_Option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/L_Option"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/F93_In_DishName"
        app:layout_constraintTop_toBottomOf="@+id/F93_In_DishName" />

    <CheckBox
        android:id="@+id/F93_In_Vegan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/L_VeganOpt"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/F93_L_Option"
        app:layout_constraintTop_toBottomOf="@+id/F93_L_Option" />

    <CheckBox
        android:id="@+id/F93_In_NutFree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/L_NutFreOpt"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/F93_In_Vegan"
        app:layout_constraintTop_toBottomOf="@+id/F93_In_Vegan" />

    <CheckBox
        android:id="@+id/F93_In_MilkFree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:text="@string/L_MilkFreOpt"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/F93_In_Vegan"
        app:layout_constraintTop_toTopOf="@+id/F93_In_Vegan" />

    <CheckBox
        android:id="@+id/F93_In_Spicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/L_SpicyOpt"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/F93_In_MilkFree"
        app:layout_constraintTop_toTopOf="@+id/F93_In_NutFree" />

    <Button
        android:id="@+id/F93_Btn_Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/L_Add"
        app:layout_constraintStart_toEndOf="@+id/F93_Btn_Clear"
        app:layout_constraintTop_toTopOf="@+id/F93_Btn_Clear" />

    <Button
        android:id="@+id/F93_Btn_Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/L_Back"
        app:layout_constraintEnd_toEndOf="@+id/F93_Btn_Clear"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/F93_Btn_Clear"
        app:layout_constraintTop_toBottomOf="@+id/F93_Btn_Clear" />

    <Button
        android:id="@+id/F93_Btn_Clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/L_Clear"
        app:layout_constraintStart_toStartOf="@+id/F93_In_NutFree"
        app:layout_constraintTop_toBottomOf="@+id/F93_In_NutFree" />

    <Button
        android:id="@+id/F93_Btn_Records"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/L_Records"
        app:layout_constraintBottom_toBottomOf="@+id/F93_Btn_Back"
        app:layout_constraintEnd_toEndOf="@+id/F93_Btn_Submit"
        app:layout_constraintStart_toStartOf="@+id/F93_Btn_Submit"
        app:layout_constraintTop_toTopOf="@+id/F93_Btn_Back"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>