<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/F02_inputs_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/F02_input_time"
        android:layout_width="238dp"
        android:layout_height="65dp"
        android:layout_below="@+id/F02_label_Time"
        android:layout_alignStart="@+id/F02_label_Time"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="18dp" />

    <TextView
        android:id="@+id/F02_Label_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="297dp"
        android:text="@string/L_Date"
        android:textSize="30sp" />

    <Button
        android:id="@+id/F02_Btn_Calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_alignTop="@+id/F02_input_Date"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-3dp"
        android:layout_toEndOf="@+id/F02_input_Date"
        android:text="@string/L_Picker" />

    <TextView
        android:id="@+id/F02_input_Date"
        android:layout_width="143dp"
        android:layout_height="44dp"
        android:layout_below="@+id/F02_Label_Date"
        android:layout_alignStart="@+id/F02_Label_Date"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:text="@string/P_Date"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/F02_label_Time"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_below="@+id/F02_input_Date"
        android:layout_alignStart="@+id/F02_input_Date"
        android:layout_marginStart="2dp"
        android:layout_marginTop="9dp"
        android:text="@string/L_Time"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/F02_Label_Dish"
        android:layout_width="120dp"
        android:layout_height="51dp"
        android:layout_below="@+id/F02_input_time"
        android:layout_alignStart="@+id/F02_input_time"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="23dp"
        android:text="@string/L_Dish"
        android:textSize="30sp" />

    <Spinner
        android:id="@+id/F02_Input_dish"
        android:layout_width="298dp"
        android:layout_height="76dp"
        android:layout_below="@+id/F02_Label_Dish"
        android:layout_alignStart="@+id/F02_input_time"
        android:layout_marginStart="0dp"
        android:layout_marginTop="17dp" />

</RelativeLayout>
