<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Application.MainActivity">

    <Button
        android:id="@+id/f03_Btn_Pick"
        android:layout_width="215dp"
        android:layout_height="86dp"
        android:layout_marginBottom="232dp"
        android:text="@string/L_Pick"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/F02_result_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:contentDescription="@string/L_Description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/F03_result_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/L_Food_placeholder"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/F02_result_img"
        app:layout_constraintStart_toStartOf="@+id/F02_result_img"
        app:layout_constraintTop_toBottomOf="@+id/F02_result_img" />

    <Button
        android:id="@+id/F03_Btn_Home"
        android:layout_width="127dp"
        android:layout_height="51dp"
        android:layout_marginTop="36dp"
        android:text="@string/L_Back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/f03_Btn_Pick" />
</androidx.constraintlayout.widget.ConstraintLayout>