<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/ent_f94_L_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/L_Date"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ent_f94_L_food"
        android:layout_width="165dp"
        android:layout_height="19dp"
        android:layout_marginTop="12dp"
        android:text="@string/L_Food_placeholder"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/ent_f94_L_Date"
        app:layout_constraintTop_toBottomOf="@+id/ent_f94_L_Date" />

    <Button
        android:id="@+id/ent_f94_Btn_Delete"
        android:layout_width="97dp"
        android:layout_height="67dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#B60D0D"
        android:shadowColor="#D3D3D3"
        android:text="@string/l_Delete"
        android:textColor="#E8E7E7"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>