<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/F02_Title"
        android:layout_width="205dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/F02_TItle"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/F02_ScrollPane"
        android:layout_width="375dp"
        android:layout_height="497dp"
        android:layout_marginTop="8dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/F02_Title" >

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/fragment_f02_inputfields"/>
    </ScrollView>

    <Button
        android:id="@+id/F02_BTN_Home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"
        android:text="@string/L_Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/F02_ScrollPane" />

    <Button
        android:id="@+id/F02_BTN_Clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/L_Clear"
        app:layout_constraintStart_toEndOf="@+id/F02_BTN_Home"
        app:layout_constraintTop_toTopOf="@+id/F02_BTN_Home" />

    <Button
        android:id="@+id/F02_BTN_Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/L_Submit"
        app:layout_constraintStart_toEndOf="@+id/F02_BTN_Clear"
        app:layout_constraintTop_toTopOf="@+id/F02_BTN_Clear" />

</androidx.constraintlayout.widget.ConstraintLayout>
