<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.RegisterActivty">

    <TextView
        android:id="@+id/E02_L_Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:text="@string/L_Username"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/E02_L_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/L_Password"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/E02_In_Username"
        app:layout_constraintTop_toBottomOf="@+id/E02_In_Username" />

    <EditText
        android:id="@+id/E02_In_Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/L_Username"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/E02_L_Username"
        app:layout_constraintTop_toBottomOf="@+id/E02_L_Username"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/E02_Btn_Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/L_Submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toEndOf="@+id/E02_Btn_Back"
        app:layout_constraintTop_toTopOf="@+id/E02_Btn_Back" />

    <Button
        android:id="@+id/E02_Btn_Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="40dp"
        android:text="@string/L_Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/E02_In_Password" />

    <EditText
        android:id="@+id/E02_In_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/L_Password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/E02_L_Password"
        app:layout_constraintTop_toBottomOf="@+id/E02_L_Password" />
</androidx.constraintlayout.widget.ConstraintLayout>